# ot-matrix

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.github/workflows/: release.yaml
cmake/configs/: version_constants.h.in
cmake/modules/: configuration.cmake
src/app/: CMakeLists.txt
src/app/main-app/: CMakeLists.txt  main_app.cpp
src/lib/: CMakeLists.txt
src/lib/sparce-matrix/: CMakeLists.txt  pair_hash.hpp  sparce_matrix.hpp  sparce_matrix_map.hpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt  unit_tests.cpp
